message ModuleConfig {
  message AutoPowerCycleConfig {
    bool enabled = 1 [default = true];
    uint32 low_threshold = 2 [default = 20];
    uint32 resume_threshold = 3 [default = 60];
    string shutdown_message = 4 [default = "Shutting down until battery recharges to acceptable level"];
    string power_up_message = 5 [default = "Back online â€“ battery sufficiently recharged"];
    bool is_dm = 6 [default = false];
    uint32 target = 7 [default = 2023947142];  // LongFast hash: 0x78aa97c2

    // This appears at the bottom of the module settings page in the app
    option (meshtastic.module_info) = {
      version: "2.1",
      author: "just-stuff-tm",
      description: "Auto Power Cycle",
      url: "https://github.com/just-stuff-tm/meshtastic-auto-power-cycle"
    };
  }
  AutoPowerCycleConfig auto_power_cycle = 12;
}
